--- a/DAM.Presentation/Components/Pages/Asset/Edit.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Edit.razor
@@ -169,6 +169,9 @@
                    value="@_searchText"
                    @oninput="OnSearchInputChanged"
                    placeholder="Search for tags by name or id" />
+            <button class="btn btn-outline-primary btn-sm" @onclick="PreviousPage">⬅️</button>
+            <span class="mx-2">@_currentPageNumber</span>
+            <button class="btn btn-outline-primary btn-sm" @onclick="NextPage">➡️</button>
         </div>
 
         <div class="tag-gallery">
