--- a/DAM.Presentation/Components/Pages/Product/Products.razor
+++ b/DAM.Presentation/Components/Pages/Product/Products.razor
@@ -34,7 +34,7 @@
                         placeholder="Search for products by name or uuid" />
                     
                     <button class="btn btn-outline-primary btn-sm" @onclick="PreviousPage">⬅️</button>
-                    <span class="mx-2">@_currentPageNumber</span>
+                    <span class="mx-2">@_currentPageNumber / @_totalPageCount</span>
                     <button class="btn btn-outline-primary btn-sm" @onclick="NextPage">➡️</button>
                 </div>
             </div>
